# semgrep-interfaces

./: .codemapignore  .gitattributes  .gitignore  .gitmodules  .semgrep-version  Analyzer.ml  Analyzer.mli  LICENSE  Lang.ml  Lang.mli  Language.ml  Language.mli  Makefile  NOTICE  README.md  Rule_ID.ml  Rule_ID.mli  Semgrep_output_v0.atd  Semgrep_output_v0_j.ml  Semgrep_output_v0_j.mli  Semgrep_output_v1.atd  Semgrep_scan_output_v1.atd  Target_selector.ml  after.txt  ast_generic_v0.atd  ast_generic_v0_j.ml  ast_generic_v0_j.mli  ast_generic_v1.atd  ast_generic_v1.py  ast_generic_v1_j.ml  ast_generic_v1_j.mli  before.txt  dev.opam  dune  dune-project  generate.py  lang.json  rule_schema.yaml  rule_schema_v1.yaml  rule_schema_v2.atd  (+26 more)
.github/: pull_request_template.md
.github/workflows/: check-generated.yaml  lint.yaml
protos/: semgrep_output_v1.proto
scripts/: check-backwards-compatability.sh  check-backwards-compatibility  jsonschema2protobuf.py
tests/: .gitignore  Makefile  ast_generic_v1.py  read-ast.py  test-ast
tests/data/: hello.java
tests/jsonschema/: Makefile  validate  validate.py
tests/jsonschema/rules/: entropy-misspelled.fail.yaml  entropy-mode.fail.yaml  entropy-short.ok.yaml  entropy_v2-invalid-mode.fail.yaml  entropy_v2-mode.ok.yaml  entropy_v2-no-mode.ok.yaml  entropy_v2-short.ok.yaml
