# This is meant to be installed with 'opam install --deps-only . '
#
opam-version: "2.0"
maintainer: "r2c"
authors: "r2c"
homepage: "n/a"
bug-reports: "n/a"
synopsis: "OCaml development dependencies"

depends: [
  "atd" {= "2.6.0"}
  "atdpy" {>= "2.12.0"}
  "atdts" {>= "2.11.0"}
  "atdgen" {>= "2.10.0"}
]
