# This is meant to be installed with 'opam install --deps-only . '
#
opam-version: "2.0"
maintainer: "semgrep"
authors: "r2c"
homepage: "n/a"
bug-reports: "n/a"
synopsis: "Interfaces for Semgrep"
dev-repo: "git+https://github.com/semgrep/semgrep-interfaces.git"
license: "LGPL-2.1-only WITH OCaml-LGPL-linking-exception"

build: []
install: []

depends: [
  "atd" {>= "2.6.0"}
  "atdpy" {>= "3.0.0"}
  "atdts" {>= "2.13.0"}
  "atdgen" {>= "3.0.1"}
  "conf-jq"
]
